# inclusify-audit-agent

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.githooks/: commit-msg  pre-commit
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/01-scaffold/: 01-CONTEXT.md
api/: index.py
data/eric/: queries.txt
data/fixtures/: sample.txt
data/lexicon/: README.md
docs/: BUILD_PLAN.md  DEPLOY.md  NEEDS_KEYS.md  PONYTAIL_DEBT.md  PRD.md
eval/: achva.py  baseline.py  gold.py  run.py
frontend/: index.html  nginx.conf
scripts/: fetch_eric.py  gen_architecture.py  teardown_vm.sh
src/inclusify_agent/: agent.py  cli.py  config.py  ingest.py  report.py
src/inclusify_agent/data/: inclusive_lexicon.json
src/inclusify_agent/graph/: __init__.py  build.py  nodes.py  state.py
src/inclusify_agent/providers/embeddings/: __init__.py  base.py  hash_emb.py  local_st.py  openai_compat_emb.py
src/inclusify_agent/providers/llm/: __init__.py  (+4 more)
src/inclusify_agent/server/: __init__.py  app.py  recording_llm.py  seed.py
src/inclusify_agent/tools/: __init__.py  _json_extract.py  ask_user.py  chunk.py  classify_span.py  eric_live_search.py  explain_why.py  lexicon_lookup.py  propose_rewrite.py  record_finding.py  retrieve_citation.py  schemas.py
tests/: conftest.py  test_imports.py
tests/contract/: test_api.py  test_config_selection.py  test_embeddings_contract.py  test_llm_contract.py  test_mock_llm_determinism.py  test_vectorstore_contract.py
tests/e2e/: test_audit_e2e.py
tests/unit/: test_cli.py  test_eval.py  test_ingest.py  test_json_extract.py  test_live_providers.py  test_report.py  test_tools.py
(+10 files in other folders)
